# AB-Testing

./: main.py  pyproject.toml
notebooks/: 01_ab_test_basic_concepts.ipynb  02_random_assignment_and_metrics.ipynb
